# College_Notice_Copilot

./: Dockerfile  answer_pipeline.py  app.py  cache.py  chatbot.py  ingestion.py  main.py  pyproject.toml  requirements.txt  test.py  testing.ipynb
